-nav-bar on small screens work in progress -fix body width of small screens

--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,10 @@ body {
 #header {
   background: lightgrey;
   z-index: 1;
+  margin-top: -16px;
+    z-index: 1;
+    position: fixed;
+    width: 90%;
 }
 
 #header__logo:hover {
@@ -32,8 +36,11 @@ body {
 
 #nav-bar__2 {
   display: flex;
+  flex-direction: column;
   gap: 1rem;
   font-size: 20px;
+  position: fixed;
+  background: lightgrey;
 }
 
 #title,
@@ -57,6 +64,9 @@ body {
 
 #title {
   font-size: 3rem;
+     
+    margin-bottom: 0.5rem;
+    margin-top: 10rem;
 }
 
 #form {
@@ -76,6 +86,10 @@ button:hover {
   cursor: pointer;
 }
 
+#email {
+  width: 90%
+}
+
 button:active {
   background-color: #f4de4d;
 }
@@ -90,7 +104,7 @@ section {
   font-size: 2.5rem;
   margin-bottom: 2rem;
   background-color: #ffc100;
-  width: 40rem;
+  width: 20rem;
   height: 13rem;
   clip-path: polygon(0% 0%, 100% 0%, 80% 100%, 0% 100%);
   border: 1px solid black;
@@ -157,7 +171,7 @@ svg {
     color: black;
     text-decoration: none;
   }
-  
+
   #nav-bar__1-menu {
     display: flex;
     gap: 1rem;
@@ -174,19 +188,18 @@ svg {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    
   }
-  
+
   #dot {
     font-size: 5rem;
     margin-top: -3.5rem;
   }
-  
+
   main {
     margin-top: 50vh;
     text-align: center;
   }
-  
+
   #title {
     margin-top: 100vh;
   }
@@ -217,6 +230,14 @@ svg {
 
   section {
     max-width: 90%;
+    font-size: 2.5rem;
+    margin-bottom: 2rem;
+    background-color: #ffc100;
+    width: 40rem;
+    height: 13rem;
+    clip-path: polygon(0% 0%, 100% 0%, 80% 100%, 0% 100%);
+    border: 1px solid black;
+    z-index: -1;
   }
 
   .hero {
